[package]
name = "RSLR1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }


[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
regex = "1.9.5"
regex-syntax = "0.7.5"
syn = {version = "2.0.37", features = ["full", "extra-traits"]}
rayon = "1.8.0"
